# audio_transcript_fastapi_server

./: .gitignore  README.md
fastapi_server/: pyproject.toml
fastapi_server/fastapi_server/: my-file.csv  preprocessing.py  preprocessing_f.py  preprocessing_poo.py  route.py  router.py  routerpoo.py  server.py  test.py
fastapi_server/fastapi_server/app/: config.py  preprocessing.py  server.py  users.db  users.sqlite3  users.sqlite3-shm  users.sqlite3-wal
fastapi_server/fastapi_server/models/: audiobase64_model.py  user_model.py
fastapi_server/tests/: test_fastapi_server.py
