[tool.poetry]
name = "fastapi_server"
version = "0.1.0"
description = ""
authors = ["Nath <nathalia.barreirosf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.9.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
