[tool.poetry]
name = "fastapi_server"
version = "0.1.0"
description = ""
authors = ["Nath <nathalia.barreirosf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.1"
uvicorn = "^0.17.5"
python-multipart = "^0.0.7"
pydantic = {extras = ["email"], version = "^1.9.0"}
pandas = "^1.4.1"
aiofiles = "^0.8.0"
deepspeech = "^0.9.3"
webrtcvad = "^2.0.10"
PyQt5 = "^5.15.6"
tortoise-orm = "^0.18.1"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
PyJWT = "^2.4.0"
python-dotenv = "^0.19.2"
python-magic = "^0.4.25"
numpy = "^1.22.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.9.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
